1.2pre
	* Enable ftd2xx support
	* More timing fixes
	* Add additional debug instrumentation
	* Account for negative drift in jitter calculation
	* Split headers, code cleanup, more suitable for public library

1.1
	* Fix time drifting for 750kbps playback

1.0
	* Initial release with libftdi support