@@ -1,9 +1,11 @@
 1.2pre
+	* Use dynamic loading to access FTDI chip
 	* Enable ftd2xx support
 	* More timing fixes
 	* Add additional debug instrumentation
 	* Account for negative drift in jitter calculation
 	* Split headers, code cleanup, more suitable for public library
+	* Switch to "exSID USB" description string
 
 1.1
 	* Fix time drifting for 750kbps playback
